--- a/MijnGitWebsite/index.html
+++ b/MijnGitWebsite/index.html
@@ -6,6 +6,7 @@
     <title>MijnGitWebsite</title>
 </head>
 <body>
-    
+    <h1>Mijn eerste GITWebsite</h1>
+    <p>Hier kan je mijn eerste gepubliceerde website mat GitHub Pages terugvinden</p>
 </body>
 </html>
