--- a/MijnGitWebsite/index.html
+++ b/MijnGitWebsite/index.html
@@ -7,6 +7,11 @@
 </head>
 <body>
     <h1>Mijn eerste GITWebsite</h1>
-    <p>Hier kan je mijn eerste gepubliceerde website mat GitHub Pages terugvinden</p>
+    <section>
+        <p>Hier kan je mijn eerste gepubliceerde website mat GitHub Pages terugvinden</p>
+    </section>
+    <footer>
+        <p>&copy;Kyan Geys</p>
+    </footer>
 </body>
 </html>
