--- a/MijnGitWebsite/index.html
+++ b/MijnGitWebsite/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Mijn eerste GITWebsite</h1>
     <section>
-        <p>Hier kan je mijn eerste gepubliceerde website mat GitHub Pages terugvinden</p>
+        <p>Hier kan je mijn eerste gepubliceerde website met GitHub Pages terugvinden</p>
     </section>
     <footer>
         <p>&copy;Kyan Geys</p>
