--- a/MijnGitWebsite/index.html
+++ b/MijnGitWebsite/index.html
@@ -11,6 +11,7 @@
     <section>
         <p>Hier kan je mijn eerste gepubliceerde website met GitHub Pages terugvinden</p>
     </section>
+    <img src="Afbeeldingen/GitHubPages.jpg" alt="GITHUBPages foto">
     <footer>
         <p>&copy;Kyan Geys</p>
     </footer>
