Header en navigatiemenu opgebouwd

--- a/WebsiteBedrijf/index.html
+++ b/WebsiteBedrijf/index.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="icon" href="Afbeeldingen/Porsche_Embleem.webp" type="image/x-icon">
+    <title>Porsche</title>
 </head>
 <body>
-    
+    <header><img src="Afbeeldingen/Porsche_Logo.png" alt="Porsche logo" width="500"></header>
+    <nav>
+        <ul>
+            <li>Modellen</li>
+            <li>Advies & aankoop</li>
+            <li>Services</li>
+            <li>Experience</li>
+            <li>Locatie</li>
+        </ul>
+    </nav>
 </body>
 </html>
