Opmaak aan de header en het navigatiemenu toegevoegd

--- a/WebsiteBedrijf/index.html
+++ b/WebsiteBedrijf/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="Afbeeldingen/Porsche_Embleem.webp" type="image/x-icon">
+    <link rel="stylesheet" href="opmaak.css">
     <title>Porsche</title>
 </head>
 <body>
-    <header><img src="Afbeeldingen/Porsche_Logo.png" alt="Porsche logo" width="500"></header>
-    <nav>
+    <header>
+        <img src="Afbeeldingen/Porsche_Logo.png" alt="Porsche logo" width="500">
+        <nav>
         <ul>
             <li>Modellen</li>
             <li>Advies & aankoop</li>
@@ -17,5 +19,6 @@
             <li>Locatie</li>
         </ul>
     </nav>
+    </header>
 </body>
 </html>
