Aan index.html foto's toegevoegd en opgemaakt

--- a/WebsiteBedrijf/index.html
+++ b/WebsiteBedrijf/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,16 +9,29 @@
 </head>
 <body>
     <header>
-        <img src="Afbeeldingen/Porsche_Logo.png" alt="Porsche logo" width="500">
+        <a href="index.html"><img id="Porsche_Logo" src="Afbeeldingen/Porsche_Logo.png" alt="Porsche logo" width="500"></a>
         <nav>
         <ul>
-            <li>Modellen</li>
-            <li>Advies & aankoop</li>
-            <li>Services</li>
-            <li>Experience</li>
-            <li>Locatie</li>
+            <a href="modellen.html"><li>Modellen</li></a>
+            <a href=""><li>Advies & aankoop</li></a>
+            <a href=""><li>Services</li></a>
+            <a href=""><li>Experience</li></a>
+            <a href=""><li>Locatie</li></a>
+            <li><img src="Afbeeldingen/Account_Icoon.jpg" alt="Account icoon" width="35"></li>
         </ul>
     </nav>
     </header>
+    <article>
+        <section id="ModellenFoto">
+            <h1>Uw Porsche reis begint nu.</h1>
+            <table>
+                <td><a href=""><img class="FotoIndex" src="Afbeeldingen/Porsche_911.png" alt="Porsche 911"></a></td>
+                <td><a href=""><img class="FotoIndex" src="Afbeeldingen/Porsche_Panamera.png" alt="Porsche Panamera"></a></td>
+                <td><a href=""><img class="FotoIndex" src="Afbeeldingen/Porsche_Taycan.png" alt="Porsche Taycan"></a></td>
+                <td><a href=""><img class="FotoIndex" src="Afbeeldingen/Porsche_Macan.png" alt="Porsche Macan"></a></td>
+                <td><a href=""><img class="FotoIndex" src="Afbeeldingen/Porsche_Cayenne.png" alt="Porsche Cayenne"></a></td>
+            </table>
+        </section>
+    </article>
 </body>
 </html>
