Beginscherm aangepast en 911 carrera toegevoegd aan modellen.html en opmaak toegepast

--- a/WebsiteBedrijf/index.html
+++ b/WebsiteBedrijf/index.html
@@ -22,10 +22,10 @@
     </nav>
     </header>
     <article>
-        <section id="ModellenFoto">
+        <section>
             <h1>Uw Porsche reis begint nu.</h1>
             <table>
-                <td><a href=""><img class="FotoIndex" src="Afbeeldingen/Porsche_911.png" alt="Porsche 911"></a></td>
+                <td><a href="modellen.html#MModel-911"><img class="FotoIndex" src="Afbeeldingen/Porsche_911.png" alt="Porsche 911"></a></td>
                 <td><a href=""><img class="FotoIndex" src="Afbeeldingen/Porsche_Panamera.png" alt="Porsche Panamera"></a></td>
                 <td><a href=""><img class="FotoIndex" src="Afbeeldingen/Porsche_Taycan.png" alt="Porsche Taycan"></a></td>
                 <td><a href=""><img class="FotoIndex" src="Afbeeldingen/Porsche_Macan.png" alt="Porsche Macan"></a></td>
