Porsche Panamera toegevoegd aan modellen.html en opmaak toegepast

--- a/WebsiteBedrijf/modellen.html
+++ b/WebsiteBedrijf/modellen.html
@@ -38,15 +38,40 @@
             <img id="ModelInfoFoto" src="Afbeeldingen/Porsche_911_ModelFoto2.avif" alt="Porsche 911 Carrera">
         </section>
         <section class="TextBlok">
-    <img class="TextFoto" src="Afbeeldingen/Porsche_911_TextFoto.avif" alt="Porsche 911">
+            <img class="TextFoto" src="Afbeeldingen/Porsche_911_TextFoto.avif" alt="Porsche 911">
     
-    <div class="TextLinks">
-        <h1>The one and always.</h1>
-        <p>
-            Iedereen die van een Porsche droomt, heeft meestal deze auto in gedachten: de 911 is al meer dan 60 jaar het toonbeeld van een indrukwekkende, krachtige sportwagen die geschikt is voor dagelijks rijplezier. Neem plaats achter het stuur van de nieuwe 911 en word onderdeel van een unieke community.
-        </p>
-    </div>
-</section>
+            <div class="TextLinks">
+                <h1>The one and always.</h1>
+                <p>
+                    Iedereen die van een Porsche droomt, heeft meestal deze auto in gedachten: de 911 is al meer dan 60 jaar het toonbeeld van een indrukwekkende, krachtige sportwagen die geschikt is voor dagelijks rijplezier. Neem plaats achter het stuur van de nieuwe 911 en word onderdeel van een unieke community.
+                </p>
+            </div>
+        </section>
+        <section id="Model-Panamera">
+            <h1 class="ModelTitel">Panamera</h1>
+            <img class="Modellen" src="Afbeeldingen/Porsche_Panamera_ModelFoto.avif" alt="Porsche Panamera">
+        </section>
+        <section id="ModelInfo">
+            <h1 id="ModelInfoTitel">5,3 <small>s</small></h1>
+            <p id="ModelInfoOndertitel">Acceleratie 0 - 100 km/h</p>
+            <h1 id="ModelInfoTitel">260 <small>kw</small> / 353 <small>pk</small></h1>
+            <p id="ModelInfoOndertitel">Acceleratie 0 - 100 km/h</p>
+            <h1 id="ModelInfoTitel">272 <small>km/h</small></h1>
+            <p id="ModelInfoOndertitel">Topsnelheid</p>
+        </section>
+        <section id="ModelInfoFotoSection">
+            <img id="ModelInfoFoto" src="Afbeeldingen/Porsche_Panamera_ModelFoto2.avif" alt="Porsche Panamera">
+        </section>
+        <section class="TextBlok">
+            <img class="TextFoto" src="Afbeeldingen/Porsche_Panamera_TextFoto.avif" alt="Porsche Panamera">
+    
+            <div class="TextLinks">
+                <h1>Moed is een beslissing.</h1>
+                <p>
+                    Voor spannende visioenen is het de moeite waard om te vechten. Als een echte sportwagen voor vier personen die indrukwekkende prestaties combineert met enorm veel comfort. Velen hielden het voor onmogelijk, anderen vonden het getuigen van lef.
+                </p>
+            </div>
+        </section>
     </article>
 </body>
 </html>
