--- a/WebsiteBedrijf/index.html
+++ b/WebsiteBedrijf/index.html
@@ -25,8 +25,8 @@
         <section>
             <h1>Uw Porsche reis begint nu.</h1>
             <table>
-                <td><a href="modellen.html#MModel-911"><img class="FotoIndex" src="Afbeeldingen/Porsche_911.png" alt="Porsche 911"></a></td>
-                <td><a href=""><img class="FotoIndex" src="Afbeeldingen/Porsche_Panamera.png" alt="Porsche Panamera"></a></td>
+                <td><a href="modellen.html#Model-911"><img class="FotoIndex" src="Afbeeldingen/Porsche_911.png" alt="Porsche 911"></a></td>
+                <td><a href="modellen.html#Model-Panamera"><img class="FotoIndex" src="Afbeeldingen/Porsche_Panamera.png" alt="Porsche Panamera"></a></td>
                 <td><a href=""><img class="FotoIndex" src="Afbeeldingen/Porsche_Taycan.png" alt="Porsche Taycan"></a></td>
                 <td><a href=""><img class="FotoIndex" src="Afbeeldingen/Porsche_Macan.png" alt="Porsche Macan"></a></td>
                 <td><a href=""><img class="FotoIndex" src="Afbeeldingen/Porsche_Cayenne.png" alt="Porsche Cayenne"></a></td>
