Alle overige modellen toegevoegd in modellen.html en op het beginscherm een link gelegd naar de Porsche website voor meer modellen

--- a/WebsiteBedrijf/index.html
+++ b/WebsiteBedrijf/index.html
@@ -27,9 +27,10 @@
             <table>
                 <td><a href="modellen.html#Model-911"><img class="FotoIndex" src="Afbeeldingen/Porsche_911.png" alt="Porsche 911"></a></td>
                 <td><a href="modellen.html#Model-Panamera"><img class="FotoIndex" src="Afbeeldingen/Porsche_Panamera.png" alt="Porsche Panamera"></a></td>
-                <td><a href=""><img class="FotoIndex" src="Afbeeldingen/Porsche_Taycan.png" alt="Porsche Taycan"></a></td>
-                <td><a href=""><img class="FotoIndex" src="Afbeeldingen/Porsche_Macan.png" alt="Porsche Macan"></a></td>
-                <td><a href=""><img class="FotoIndex" src="Afbeeldingen/Porsche_Cayenne.png" alt="Porsche Cayenne"></a></td>
+                <td><a href="modellen.html#Model-Taycan"><img class="FotoIndex" src="Afbeeldingen/Porsche_Taycan.png" alt="Porsche Taycan"></a></td>
+                <td><a href="modellen.html#Model-Macan"><img class="FotoIndex" src="Afbeeldingen/Porsche_Macan.png" alt="Porsche Macan"></a></td>
+                <td><a href="modellen.html#Model-Cayenne"><img class="FotoIndex" src="Afbeeldingen/Porsche_Cayenne.png" alt="Porsche Cayenne"></a></td>
+                <td><a target="_blank" href="https://www.porsche.com/belgium/nl/models/"><img class="FotoIndex" src="Afbeeldingen/MeerModellen.png" alt="Meer modellen"></a></td>
             </table>
         </section>
     </article>
